# Parallel

Lab1_1/: CMakeLists.txt  Makefile  main.c
Lab2_2/: Lab2.sln  scripts.ipynb
Lab2_2/Lab2/: Lab2.vcxproj  integral.c  integral2.c  linequ.cpp  main.c
Lab2_2/results/: ~$Отчет_task1(АвтоматическиВосстановлено).xlsx  ~$чет_task1.docx  ~WRL0004.tmp  Отчет.xlsx  Отчет_1.docx  Отчет_task1(АвтоматическиВосстановлено).xlsx  Отчет_task1.docx  Отчет_task1.xlsx
Lab3_1/: CMakeLists.txt  task1.cpp  ~$чет_task1.docx  Отчет_task1.docx
Lab4_1/: main.py  test.py
Lab5_1/: yolov8.ipynb  yolov8p_thread.py
Lab6_1/: CMakeLists.txt  Interpolation.cpp  base.c  single.cpp
